demo_1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  dev

---

apiVersion: v1
kind: Namespace
metadata:
  name:  staging

---

apiVersion: v1
kind: Namespace
metadata:
  name:  prod
