demo_1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-backend-v1
  namespace: dev
spec:
  selector:
    matchLabels:
      app: dummy-backend-v1
  template:
    metadata:
      labels:
        app: dummy-backend-v1
    spec:
      containers:
      - name: dummy-backend-v1
        image: alsaheem/dummy-backend:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-backend-v2
  namespace: dev
spec:
  selector:
    matchLabels:
      app: dummy-backend-v2
  template:
    metadata:
      labels:
        app: dummy-backend-v2
    spec:
      containers:
      - name: dummy-backend-v2
        image: alsaheem/dummy-backend:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-frontend
  namespace: dev
spec:
  selector:
    matchLabels:
      app: dummy-frontend
  template:
    metadata:
      labels:
        app: dummy-frontend
    spec:
      containers:
      - name: dummy-frontend
        image: alsaheem/dummy-frontend
        ports:
        - containerPort: 3000






---
# apiVersion: extensions/v1beta1
# kind: Deployment
# metadata:
#   name:  my-name
#   labels:
#     name:  my-name
# spec:
#   strategy:
#     rollingUpdate:
#       maxSurge: 1
#       maxUnavailable: 1
#     type: RollingUpdate
#   template:
#     metadata:
#       labels:
#         name:  my-name
#     spec:
#       containers:
#       - image:  ipedrazas/docmock
#         name:  my-name
#         resources:
#           requests:
#             cpu: "20m"
#             memory: "55M"
#         livenessProbe:
#           httpGet:
#             path: /_status/healthz
#             port: 5000
#           initialDelaySeconds: 90
#           timeoutSeconds: 10
#         readinessProbe:
#           httpGet:
#             path: /_status/healthz
#             port: 5000
#           initialDelaySeconds: 30
#           timeoutSeconds: 10
#         env:
#         - name:  ENVVARNAME
#           value:  ENVVARVALUE       
#         ports:
#         - containerPort:  5000
#           name:  my-name
#         volumeMounts:
#         - mountPath: /data
#           name: data
#       volumes:
#         - name: data
#           emptyDir: {}
#       restartPolicy: Always
#       imagePullPolicy: Always
